Fixed the overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,7 @@
 
 html,
 body {
+  overflow-x: hidden;
   width: 100vw;
   min-height: 100vh;
   background-color: #f9f9f9;
